# Emit-Execute-IR

./: CMakeLists.txt  README.md  dummy_final.ll
custom-opt/: CMakeLists.txt  custom-opt.cpp
custom-plugin/: CMakeLists.txt  custom-plugin.cpp
custom-tool/: CMakeLists.txt  custom-tool.cpp
custom-translate/: CMakeLists.txt  custom-translate.cpp
include/Custom/: CMakeLists.txt  CustomDialect.h  CustomDialect.td  CustomOps.h  CustomOps.td  CustomPasses.h  CustomPasses.td  CustomTypes.h  CustomTypes.td
include/Custom-c/: Dialects.h
lib/: CMakeLists.txt
lib/CAPI/: CMakeLists.txt  Dialects.cpp
lib/Custom/: CMakeLists.txt  CustomDialect.cpp  CustomOps.cpp  CustomPasses.cpp  CustomTypes.cpp  LowerToStd.cpp  loadDataForQ6.cpp
resources/: dummy.ll  dummy.llvm  dummy.mlir  dummy2.mlir  dummy3.mlir  dummyarith.mlir  fact.ll  fact.llvm  fact.out  factorial.mlir  factorialstd.mlir  out.txt  q6.ll  q6.llvm  q6.mlir  q6.out  q6mlir  sumOfTwoNum.llvm  sumOfTwoNum.mlir  sumOfTwoNum.out  sumOfTwoNumInMLIR.mlir  sumOfTwoNumLLVMIR.ll
resources/sql-files/: query0.sql  query0_physplan
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/CAPI/: CMakeLists.txt  casair-capi-test.c
test/Custom/: custom-opt.mlir  custom-plugin.mlir  custom-translate.mlir  customr-pass-plugin.mlir  dummy.mlir
